--- a/frontend/src/components/cart/Cart.module.css
+++ b/frontend/src/components/cart/Cart.module.css
@@ -2,4 +2,19 @@
     font-family: Arial, Helvetica, sans-serif;
     width: 500px;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-items: space-between;
+    align-items: center; 
+}
+
+.button {
+    width: 100%;
+    margin: 30px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #333333;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
 }
