--- a/frontend/src/components/cart/CartItem.module.css
+++ b/frontend/src/components/cart/CartItem.module.css
@@ -7,10 +7,12 @@
     padding-bottom: 20px;
 }
 
-.information, .buttons {
+.buttons {
     display: flex;
-    justify-content: space-between;
+    gap: 10px;
+    justify-content: flex-start;
 }
+
 
 .img {
     max-width: 80px;
