--- a/frontend/src/components/cart/Home.module.css
+++ b/frontend/src/components/cart/Home.module.css
@@ -8,3 +8,10 @@
     right: 20px;
     top: 20px;
 }
+
+.drawerButton {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 10px;
+}
